# sdjudge

./: CMakeLists.txt  DebPack.cmake  OJdaemon.service  README.md  note.md  sdojconfig.ini  sdojconfig.yaml
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  database.cpp  judge.cpp  manager.cpp
src/daemon/config/: conf_item_map.h  config_item.cpp  config_item.h
src/daemon/log/: ojlog.cpp
src/daemon/sandboxing/: sandbox.cpp
src/daemon/util/: inline_util.h
src/expr/: main.cpp
